Fix CSS glitches involving breaks and wrapping
Three fixes:
- Viewer count and external links can no longer be broken by line wraps
- The metadata action row could be slightly too long on narrow phones (or iPad split view).  Adjusted the flex to wrap in the worst case and solve the problem in most cases by simply hiding the external link icons.  (I would rather hide the number of guesses so far, but that's actually a little trickier, so this is fine for now.)
- Match the chat textarea padding to the content above it.

--- a/client/stylesheets/puzzle.scss
+++ b/client/stylesheets/puzzle.scss
@@ -319,6 +319,7 @@ table.puzzle-list {
 
 .puzzle-metadata .view-count {
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .puzzle-metadata-answer {
@@ -350,9 +351,21 @@ table.puzzle-list {
   display: inline-block;
 }
 
+.puzzle-metadata-action-row {
+  flex-wrap: wrap;
+}
+
 .puzzle-metadata .puzzle-metadata-external-link-button, .puzzle-metadata .gdrive-button {
   display: inline-block;
   font-weight: bold;
+  white-space: nowrap;
+  /* On very small touch screens or split view, desperately try to prevent line wrap */
+  /* Revisit this */
+  @media (max-width: 320px) and (pointer: coarse) {
+    svg {
+      display: none;
+    }
+  }
 }
 
 @media (any-pointer: fine) {
